--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>For Citalli 💕</title>
+    <title>For Citlalli 💕</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
                     <div class="letter">💌</div>
                 </div>
             </div>
-            <h1 class="fade-in">Hey Citalli...</h1>
+            <h1 class="fade-in">Hey Citlalli...</h1>
             <p class="subtitle fade-in delay-1">I made something special just for you</p>
             <button class="btn fade-in delay-2" onclick="nextScreen('gif-1')">Open it 💝</button>
         </div>
@@ -83,7 +83,7 @@
             <div class="gif-container">
                 <img src="https://media1.tenor.com/m/XqcivfMwQYYAAAAC/happy-valentines.gif" alt="Will you be my valentine" class="gif valentine-gif" loading="eager">
             </div>
-            <h1 class="question-text">Citalli, will you be my Valentine?</h1>
+            <h1 class="question-text">Citlalli, will you be my Valentine?</h1>
             <div class="buttons-container" id="buttons-container">
                 <span id="arrow-left" class="arrow arrow-left hidden">&#10148;</span>
                 <button id="yes-btn" class="btn yes-btn" onclick="sayYes()">Yes!</button>
@@ -115,7 +115,7 @@
         <div class="content celebration-content">
             <h1 class="celebration-title">SHE SAID YES!! 🎉</h1>
             <div class="heart-burst">💕</div>
-            <p class="celebration-message">Citalli, you just made me the happiest person ever</p>
+            <p class="celebration-message">Citlalli, you just made me the happiest person ever</p>
             <div class="meme-section">
                 <p class="meme-caption">me after she said yes:</p>
                 <div class="gif-container">
